--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -5,7 +5,7 @@
   ui = true
 [core]
   editor = nvim
-  excludesfile = $HOME/.gitignore
+  excludesfile = ~/.gitignore
   pager = delta
 [push]
   default = simple
